[package]
name = "serial-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
futures = "0.3.21"
tokio = { version = "1.19.2", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
uart-dap = { path = "uart-dap" }
