[package]
name = "uart-dap"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2"
futures = "0.3"
futures-sink = "0.3"
if_chain = "1"
tokio = { version = "1.19", features = ["sync", "macros", "io-util"] }
tokio-serial = "5"
tracing = "0.1"

[dev-dependencies]
clap = { version = "3", features = ["derive"] }
derive_more = "0.99"
tokio = { version = "1", features = ["io-std", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serial = "5"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[[example]]
name = "client"

[[example]]
name = "server"
