[package]
name = "uart-dap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
futures = "0.3.21"
futures-sink = "0.3.21"
tokio = { version = "1.19.2", features = ["sync", "macros", "io-util"] }
tokio-serial = "5.4.3"
tracing = "0.1.35"

[dev-dependencies]
tokio = { version = "1.19", features = ["macros", "process", "rt", "sync", "time"] }
tracing = "0.1.35"
tracing-subscriber = "0.3"
